build_log_2.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
Java compiler version 25 has deprecated support for compiling with source/target version 8.
Try one of the following options:
    1. [Recommended] Use Java toolchain with a lower language version
    2. Set a higher source/target version
    3. Use a lower version of the JDK running the build (if you're not using Java toolchain)
For more details on how to configure these settings, see https://developer.android.com/build/jdks.
To suppress this warning, set android.javaCompile.suppressSourceTargetDeprecationWarning=true in gradle.properties.
warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\model\LoginResponse.java:9: error: SerializedName is not a repeatable annotation interface
    @SerializedName("user")
    ^
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\fragments\MapFragment.java:139: error: <anonymous com.example.cnsmsclient.ui.fragments.MapFragment$1> is not abstract and does not override abstract method onLocationReceived(double,double) in LocationListener
            locationHelper.getCurrentLocation(new LocationHelper.LocationListener() {
                                                                                    ^
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\fragments\MapFragment.java:140: error: method does not override or implement a method from a supertype
                @Override
                ^
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\fragments\ReportIncidentFragment.java:112: error: <anonymous com.example.cnsmsclient.ui.fragments.ReportIncidentFragment$1> is not abstract and does not override abstract method onLocationReceived(double,double) in LocationListener
            locationHelper.getCurrentLocation(new LocationHelper.LocationListener() {
                                                                                    ^
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\fragments\ReportIncidentFragment.java:113: error: method does not override or implement a method from a supertype
                @Override
                ^
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\LoginActivity.java:177: error: <anonymous com.example.cnsmsclient.ui.LoginActivity$2> is not abstract and does not override abstract method onFailed() in BiometricCallback
                new BiometricHelper.BiometricCallback() {
                                                        ^
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\LoginActivity.java:192: error: method does not override or implement a method from a supertype
                    @Override
                    ^
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\SOSActivity.java:99: error: <anonymous com.example.cnsmsclient.ui.SOSActivity$1> is not abstract and does not override abstract method onLocationReceived(double,double) in LocationListener
            locationHelper.getCurrentLocation(new LocationHelper.LocationListener() {
                                                                                    ^
C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\SOSActivity.java:100: error: method does not override or implement a method from a supertype
                @Override
                ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
9 errors
3 warnings

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/hani7/AndroidStudioProjects/SmartCampusNavigationSafetyAssistant/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\model\LoginResponse.java:9: error: SerializedName is not a repeatable annotation interface
      @SerializedName("user")
      ^
  warning: [options] target value 8 is obsolete and will be removed in a future release
  Note: Recompile with -Xlint:deprecation for details.
  warning: [options] source value 8 is obsolete and will be removed in a future release
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\fragments\MapFragment.java:139: error: <anonymous com.example.cnsmsclient.ui.fragments.MapFragment$1> is not abstract and does not override abstract method onLocationReceived(double,double) in LocationListener
              locationHelper.getCurrentLocation(new LocationHelper.LocationListener() {
                                                                                      ^
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\fragments\ReportIncidentFragment.java:112: error: <anonymous com.example.cnsmsclient.ui.fragments.ReportIncidentFragment$1> is not abstract and does not override abstract method onLocationReceived(double,double) in LocationListener
              locationHelper.getCurrentLocation(new LocationHelper.LocationListener() {
                                                                                      ^
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\LoginActivity.java:177: error: <anonymous com.example.cnsmsclient.ui.LoginActivity$2> is not abstract and does not override abstract method onFailed() in BiometricCallback
                  new BiometricHelper.BiometricCallback() {
                                                          ^
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\SOSActivity.java:99: error: <anonymous com.example.cnsmsclient.ui.SOSActivity$1> is not abstract and does not override abstract method onLocationReceived(double,double) in LocationListener
              locationHelper.getCurrentLocation(new LocationHelper.LocationListener() {
                                                                                      ^
  warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
  Note: Some input files use or override a deprecated API.
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\fragments\MapFragment.java:140: error: method does not override or implement a method from a supertype
                  @Override
                  ^
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\fragments\ReportIncidentFragment.java:113: error: method does not override or implement a method from a supertype
                  @Override
                  ^
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\LoginActivity.java:192: error: method does not override or implement a method from a supertype
                      @Override
                      ^
  C:\Users\hani7\AndroidStudioProjects\SmartCampusNavigationSafetyAssistant\app\src\main\java\com\example\cnsmsclient\ui\SOSActivity.java:100: error: method does not override or implement a method from a supertype
                  @Override
                  ^
  9 errors
  3 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.4.0-milestone-4/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 13s
19 actionable tasks: 1 executed, 18 up-to-date
